--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/inter": "^5.0.17",
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.12",
+    "@mui/joy": "^5.0.0-beta.30",
     "@mui/material": "^5.15.12",
     "@tanstack/react-query": "^5.25.0",
     "@tanstack/react-query-devtools": "^5.25.0",
