--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "@tanstack/react-query": "^5.25.0",
     "@tanstack/react-query-devtools": "^5.25.0",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
     "date-fns": "^3.3.1",
+    "faker": "^5.5.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.3"
   },
