--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "chart.js": "^4.4.2",
     "date-fns": "^3.3.1",
     "faker": "^5.5.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
