--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-loader-spinner": "^6.1.6",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
