--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.15.12",
     "@mui/joy": "^5.0.0-beta.30",
     "@mui/material": "^5.15.12",
+    "@mui/x-charts": "^7.1.0",
     "@tanstack/react-query": "^5.25.0",
     "@tanstack/react-query-devtools": "^5.25.0",
     "axios": "^1.6.7",
