--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@fontsource/inter": "^5.0.17",
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.12",
-    "@mui/joy": "^5.0.0-beta.30",
     "@mui/material": "^5.15.12",
     "@mui/x-charts": "^7.1.0",
+    "@mui/x-date-pickers": "^7.1.1",
     "@tanstack/react-query": "^5.25.0",
     "@tanstack/react-query-devtools": "^5.25.0",
     "axios": "^1.6.7",
