--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "faker": "^5.5.3",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
