--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-loader-spinner": "^6.1.6",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
